--- a/.github/workflows/main_web.yml
+++ b/.github/workflows/main_web.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: ld55_web
-          path: export/web/index.html
+          path: export/web
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Build with Jekyll
