--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          tag_name: LD - ${{ github.ref }} + 
+          tag_name: ${{ github.ref }}-beta 
           release_name: LDRelease ${{ github.ref }}
           draft: false
           prerelease: false
