--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,17 +7,32 @@ on:
 name: Create Release
 
 jobs:
-  build:
-    uses: ./.github/workflows/export.yml
   release:
     name: Create Release
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: Build for Windows
+        id: build_win
+        uses: bbrieber/godot_ci_image@v4.2.1
+        with:
+          build-config: 'WindowsDesktop'
+      - name: Build for Linux
+        id: build_linux
+        uses: bbrieber/godot_ci_image@v4.2.1
+        with:
+          build-config: 'Linux/X11'
+      - name: Build for Web
+        id: build_web
+        uses: bbrieber/godot_ci_image@v4.2.1
+        with:
+          build-config: 'Web'
       - name: Zip Folder
         run: |
           zip -r ld_linux.zip export/linux
+          zip -r ld_web.zip export/web
+          zip -r ld_win.zip export/win
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -28,8 +43,8 @@ jobs:
           release_name: LDRelease ${{ github.ref }}
           draft: false
           prerelease: false
-      - name: Upload Release Asset
-        id: upload-release-asset 
+      - name: Upload Release Asset Linux
+        id: upload-release-asset-linux
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -37,4 +52,24 @@ jobs:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
           asset_path: ld_linux.zip
           asset_name: ld55_linux.zip
+          asset_content_type: application/zip
+      - name: Upload Release Asset Windows
+        id: upload-release-asset-win
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          asset_path: ld_win.zip
+          asset_name: ld55_win.zip
+          asset_content_type: application/zip
+      - name: Upload Release Asset Web
+        id: upload-release-asset-web
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          asset_path: ld_web.zip
+          asset_name: ld55_web.zip
           asset_content_type: application/zip
