--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,9 +30,12 @@ jobs:
           build-config: 'Web'
       - name: Zip Folder
         run: |
-          zip -r ld_linux.zip export/linux
-          zip -r ld_web.zip export/web
-          zip -r ld_win.zip export/win
+          cd export/linux
+          zip -r ld_linux.zip .
+          cd export/web
+          zip -r ld_web.zip .
+          cd export/win
+          zip -r ld_win.zip .
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -40,7 +43,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
           tag_name: ${{ github.ref }}-beta 
-          release_name: LDRelease ${{ github.ref }}
+          release_name: LD-Release ${{ github.ref }}
           draft: false
           prerelease: false
       - name: Upload Release Asset Linux
@@ -50,8 +53,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ld_linux.zip
-          asset_name: ld55_linux.zip
+          asset_path: export/linux/ld_linux.zip
+          asset_name: ld55_linux-${{ github.ref }}.zip
           asset_content_type: application/zip
       - name: Upload Release Asset Windows
         id: upload-release-asset-win
@@ -60,8 +63,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ld_win.zip
-          asset_name: ld55_win.zip
+          asset_path: export/win/ld_win.zip
+          asset_name: ld55_win-${{ github.ref }}.zip
           asset_content_type: application/zip
       - name: Upload Release Asset Web
         id: upload-release-asset-web
@@ -70,6 +73,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ld_web.zip
-          asset_name: ld55_web.zip
+          asset_path: export/web/ld_web.zip
+          asset_name: ld55_web-${{ github.ref }}.zip
           asset_content_type: application/zip
