--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,10 +32,11 @@ jobs:
         run: |
           cd export/linux
           zip -r ld_linux.zip .
-          cd export/web
+          cd ../../export/web
           zip -r ld_web.zip .
-          cd export/win
+          cd ../../export/win
           zip -r ld_win.zip .
+          cd ../..
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
